--- a/src/common/style/common.style.css
+++ b/src/common/style/common.style.css
@@ -27,15 +27,6 @@
   display: flex;
 }
 
-.overflow-x {
-  overflow-x: auto;
-  width: 100%;
-}
-
-.overflow-x::-webkit-scrollbar {
-  display: none;
-}
-
 .vh-100 {
   height: 100vh;
 }
